--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -36,30 +36,43 @@ label.error {
 }
 
 
-
-/*Pagination Style*/
-.dataTables_info {
-	width: 50%;
-	float: left;
+hr.card-header-devider {
+	margin-top: 0px !important;
 }
 
-.dataTables_paginate {
-	width: 40%;
-	float: right;
-	text-align: right;
+/*Forms */
+label.required::after {
+	content: ' *';
+	color: red !important;
 }
-.paginate_button {
-    border-radius: 31px!important;
-    margin-right: 2px;
-    margin-left: 2px;
-    min-width: 31px;
-    padding: .5rem .75rem;
-    line-height: 1.25;
-    border: 1px solid #dee2e6;
-    cursor: pointer;
+
+.form-image.logo {
+	width: 120px;
+	height: 120px;
+	position: relative;
 }
-.paginate_button.current {
-	background: #59968A!important;
-    border-color: #59968A!important;
-    color: #fff;
+.form-image.icon {
+	height: 40px;
+	width: 40px;
+	position: relative;
+	background: red;
+}
+.form-image img {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+}
+.form-image input[type='file'] {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	opacity: 0;
+	cursor: pointer;
+}
+
+.flex-end {
+	display: flex;
+	justify-content: flex-end;
 }
