--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -8,6 +8,9 @@ label.error {
 	float: none !important;
 	margin-bottom: 0 !important;
 }
+label.error+.invalid-feedback {
+	display: none !important;
+}
 
 /*lOGIN PAGE*/
 .login-content {
